--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="content">
             <div class="card">
                 <div class="icon">
-                    <i class="fas fa-edit"></i>
+                    <i class="fa-duotone fa-code"></i>
                 </div>
                 <div class="info">
                     <h3>Web developer</h3>
@@ -49,7 +49,7 @@
             </div>
             <div class="card">
                 <div class="icon">
-                    <i class="fas fa-edit"></i>
+                    <i class="fas fa-debug"></i>
                 </div>
                 <div class="info">
                     <h3>depugging</h3>
@@ -58,7 +58,7 @@
             </div>
             <div class="card">
                 <div class="icon">
-                    <i class="fas fa-edit"></i>
+                    <i class="fa-solid fa-briefcase"></i>
                 </div>
                 <div class="info">
                     <h3>Freelancer</h3>
