--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Hello, I'm Abdullah<br>
                 <span>PHP web developer</span>
             </h2>
-            <h3>send me your project, and enjoy your time</h3>
+            <h3>Full-Stack Web Developer. Passionate about creating dynamic and visually appealing websites that deliver a seamless user experience.</h3>
             <a href="#projects" class="main-btn">View my work</a>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
