--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="info">
                     <h3>Phone</h3>
-                    <p>+201020760773</p>
+                    <p>+201550825705</p>
                 </div>
             </div>
             <div class="card">
@@ -137,9 +137,9 @@
     <footer class="footer">
         <p class="footer-title">Copyrights @ <span>Abdullah Alasbahi</span></p>
         <div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/abdullah-alasbahi-04a4bb187/"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/abdullahalasbahiA"><i class="fab fa-github"></i></a>
         </div>
 
     </footer>
