--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <header>
         <a href="#" class="logo">Abdullah</a>
         <nav class="navigation">
-            <a href="#services">Services</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
-
 
     <section class="main">
         <div>
@@ -28,82 +26,36 @@
             <h3>Full-Stack Web Developer.</h3>
             <a href="#projects" class="main-btn">View my work</a>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-            </div>
-        </div>
-    </section>
-
-    <section class="cards" id="services">
-        <h2 class="title">Services</h2>
-        <div class="content">
-            <div class="card">
-                <div class="icon">
-                    <i class="fa-solid fa-code"></i>
-                </div>
-                <div class="info">
-                    <h3>Web developer</h3>
-                    <p>laudantium iusto! Consequuntur facilis molestiae repellat esse a quam perferendis dolorem debitis accusantium! Quod, rerum.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <i class="fa-solid fa-bug-slash"></i>
-                </div>
-                <div class="info">
-                    <h3>depugging</h3>
-                    <p>laudantium iusto! Consequuntur facilis molestiae repellat esse a quam perferendis dolorem debitis accusantium! Quod, rerum.</p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="icon">
-                    <i class="fa-solid fa-briefcase"></i>
-                </div>
-                <div class="info">
-                    <h3>Freelancer</h3>
-                    <p>laudantium iusto! Consequuntur facilis molestiae repellat esse a quam perferendis dolorem debitis accusantium! Quod, rerum.</p>
-                </div>
+                <a href="https://www.linkedin.com/in/abdullah-alasbahi-04a4bb187/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/abdullahalasbahiA/"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
 
     <section class="projects" id="projects">
-        <h2 class="title">Projects</h2>
+        <h2 style="color: white" class="title">Projects</h2>
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/background.png" alt="">
+                    <img src="images/Apple shop.png" alt="image for multivendor application called Apple shop">
                 </div>
                 <div class="project-info">
-                    <p class="project-category">PHP todolist</p>
+                    <p class="project-category">Multivendor e-commerce where many users can sign in and post their products</p>
                     <strong class="project-title">
-                        <span>To do list</span>
-                        <a href="#" class="more-details">More details</a>
+                        <span>Apple shop</span>
+                        <a target="_blank" href="https://github.com/abdullahalasbahiA/e-commerce" class="more-details">More details</a>
                     </strong>
                 </div>
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/background.png" alt="">
+                    <img src="images/Learning space.png" alt="Learning space project image">
                 </div>
                 <div class="project-info">
-                    <p class="project-category">PHP todolist</p>
+                    <p class="project-category">Quiz website where users can create their own bank of questions to make revising and studying easier</p>
                     <strong class="project-title">
-                        <span>To do list</span>
-                        <a href="#" class="more-details">More details</a>
-                    </strong>
-                </div>
-            </div>
-            <div class="project-card">
-                <div class="project-image">
-                    <img src="images/background.png" alt="">
-                </div>
-                <div class="project-info">
-                    <p class="project-category">PHP todolist</p>
-                    <strong class="project-title">
-                        <span>To do list</span>
-                        <a href="#" class="more-details">More details</a>
+                        <span>Learning space</span>
+                        <a target="_blank" href="https://github.com/abdullahalasbahiA/learning-space" class="more-details">More details</a>
                     </strong>
                 </div>
             </div>
@@ -135,7 +87,7 @@
     </section>
     
     <footer class="footer">
-        <p class="footer-title">Copyrights @ <span>Abdullah Alasbahi</span></p>
+        <p class="footer-title">Copyrights @ <span style="color: white" >Abdullah Alasbahi</span></p>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/abdullah-alasbahi-04a4bb187/"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
