--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <section class="main">
         <div>
             <h2>Hello, I'm Abdullah<br>
-                <span>PHP web developer</span>
+                <span style="background-color: white;">Laravel/php web developer</span>
             </h2>
             <h3>Full-Stack Web Developer.</h3>
-            <a href="#projects" class="main-btn">View my work</a>
+            <a style="border: 1px solid white;" href="#projects" class="main-btn">View my work</a>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/abdullah-alasbahi-04a4bb187/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/abdullahalasbahiA/"><i class="fab fa-github"></i></a>
